Add start server script

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -19,7 +19,7 @@
     <body>
         <div id="page">
             <div id="header">
-                <canvas id="banner"></canvas>
+                <!-- <canvas id="banner"></canvas> -->
                 <input id="search" type="text" value="" autofocus />
                 <div id="searchResults"></div>
             </div>
