--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -1,3 +1,5 @@
+@import "constants.css";
+
 *
 {
 margin: 0;
@@ -12,21 +14,25 @@ p
 
 body
 {
-    background-color: var(--background_color)
+    background-color: var(--primary-bg-color);
 }
 
 #page
 {
-    margin: 10px auto;
-    border: 3px solid #11387d;
+    overflow:hidden;
+    /* margin: 10px auto; */
     border-bottom: none;
-    width: 1020px;
+    height: 100vh;
 }
 
 #header
 {
-    padding: 10px;
+    margin: 0 auto;
+    padding-bottom: 10px;
     width: 1000px;
+    border-top: 3px solid var(--primary-color);
+    border-left: 3px solid var(--primary-color);
+    border-right: 3px solid var(--primary-color);
 }
 
 #header #banner 
@@ -38,7 +44,7 @@ body
 {
     background: #f9f9f9;
     border-radius: 10px;
-    border: 2px solid #11387d;
+    border: 2px solid var(--primary-color);
     margin: 10px auto 10px auto;
     padding: 10px;
     padding-left: 20px;
@@ -47,7 +53,7 @@ body
     width: 900px;
     font: 200% arial, sans-serif;
     font-weight: 900;
-    color: #11387d;
+    color: var(--primary-color);
     display: block;
 
     outline: none;
@@ -57,15 +63,15 @@ body
 #searchResults
 {
     position: absolute;
-    background-color: #f9f9f9;
-    border: 2px solid #11387d;
+    background-color: var(--primary-bg-color);
+    border: 2px solid var(--primary-color);
     border-top: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    z-index: 50;
+    z-index: 1;
     margin-top: -20px;
     margin-left: 28px;
     width: 900px;
@@ -83,20 +89,54 @@ body
     font-weight: 900;
 }
 
+#navbar
+{
+    background-color: var(--primary-bg-color);
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    margin: 0 auto;
+    width: 1000px;
+    height: 50px;
+    border-top: 3px solid var(--primary-color);
+    border-left: 3px solid var(--primary-color);
+    border-right: 3px solid var(--primary-color);
+}
+
+#navbar svg
+{
+    margin: 10px;
+    height: 30px;
+    width: 30px;
+}
+
+#body
+{
+    height: 100%;
+    overflow: auto;
+    position: relative;
+    border-top: 3px solid var(--primary-color);
+}
+
+#body::-webkit-scrollbar
+{
+    width: 0px;
+}
+
 #content
 {
     margin: 0 auto;
-    padding: 10px;
+    /* overflow-y: scroll; */
     text-align: left;
-    background-color: #f9f9f9;
-    width: 1000px;
+    background-color: var(--primary-bg-color);
     height: auto;
+    width: 1000px;
 }
 
 #footer
 {
-    border-top: 3px solid #ffffff;
-    background-color: #11387d;
+    border-top: 3px solid var(--primary-bg-color);
+    background-color: var(--primary-color);
 }
 
 #footer h4
@@ -105,4 +145,17 @@ body
     padding: 2px;
     text-align: center;
     color: #ffffff;
+}
+
+.navbar-sticky
+{
+    /* display: flex; */
+    position: fixed;
+    top: 0;
+    padding-bottom: 3px;
+}
+
+.icon-svg
+{
+    stroke: var(--primary-color);
 }
