--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -9,24 +9,31 @@
         <script bez-base type="text/javascript" src="{% static 'index/bezutil.js' %}"></script>
         <script bez-base type="text/javascript" src="{% static 'index/banner2.js' %}"></script>
         <script bez-base type="text/javascript" src="{% static 'index/index.js' %}"></script>
-
+        <script>
+            loadSVGs([
+                [ "{% static 'index/icons/search.svg' %}", "search-icon" ],
+            ]);
+        </script>
         {% block head %}
         {% endblock %}
-
         <title>bez</title>
     </head>
 
     <body>
         <div id="page">
             <div id="header">
-                <!-- <canvas id="banner"></canvas> -->
+                <canvas id="banner"></canvas>
                 <input id="search" type="text" value="" autofocus />
                 <div id="searchResults"></div>
             </div>
-
-            <div id="content">
-                {% block content %}
-                {% endblock %}
+            <div id="navbar">
+                <div id="search-icon"></div>
+            </div>
+            <div id="body">
+                <div id="content">
+                    {% block content %}
+                    {% endblock %}
+                </div>
             </div>
             <div id="footer">
                 <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leonid Bezroukov</h4>
