--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -11,7 +11,7 @@
         <script bez-base type="text/javascript" src="{% static 'index/index.js' %}"></script>
         <script>
             loadSVGs([
-                [ "{% static 'index/icons/search.svg' %}", "search-icon" ],
+                [ "{% static 'index/icons/search.svg' %}", () => { return document.getElementById("search-button").firstChild } ],
             ]);
         </script>
         {% block head %}
@@ -23,11 +23,12 @@
         <div id="page">
             <div id="header">
                 <canvas id="banner"></canvas>
-                <input id="search" type="text" value="" autofocus />
-                <div id="searchResults"></div>
+                <input id="search" type="text" value="" autofocus autocomplete="off"/>
+                <div id="search-results"></div>
             </div>
             <div id="navbar">
-                <div id="search-icon"></div>
+                <div id="search-button"><span class="icon"></span><span class="icon-label">Search</span></div>
+                <div id="login-button"><span class="icon-label">Login</span></div>
             </div>
             <div id="body">
                 <div id="content">
