--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -46,6 +46,7 @@
                     {% block content %}
                     {% endblock %}
                 </div>
+                <div id="back-to-top">TOP</div>
             </div>
             <div id="footer">
                 <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leonid Bezroukov</h4>
