--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -2,8 +2,8 @@
 
 *
 {
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 p
@@ -41,7 +41,8 @@ input
 #header
 {
     margin: 0 auto;
-    width: 1000px;
+    width: 100%;
+    max-width: 1000px;
     height: 250px;
     border-left: 3px solid var(--primary-color);
     border-right: 3px solid var(--primary-color);
@@ -49,7 +50,7 @@ input
 
 #header #banner
 {
-    width: 1000px;
+    width: 100%;
     height: 150px;
     background-color: #000000;
 }
@@ -58,7 +59,7 @@ input
 {
     margin: 10px auto 10px auto;
     height: 50px;
-    width: 900px;
+    width: 90%;
     font: 200% arial, sans-serif;
     font-weight: 900;
 }
