--- a/index/static/index/constants.css
+++ b/index/static/index/constants.css
@@ -2,4 +2,7 @@
 {
     --primary-color: #11387d;
     --primary-bg-color: #1e1e2c;
+    --primary-header-color: #557abf;
+    --primary-link-color: #ff66b2;
+    --primary-text-color: #f9f9f9;
 }
