--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -10,9 +10,9 @@
         <script bez-base type="text/javascript" src="{% static 'index/banner.js' %}"></script>
         <script bez-base type="text/javascript" src="{% static 'index/index.js' %}"></script>
         <script>
-            loadSVGs([
-                [ "{% static 'index/icons/search.svg' %}", () => { return document.getElementById("search-button").firstChild } ],
-            ]);
+            // loadSVGs([
+            //     [ "{% static 'index/icons/search.svg' %}", () => { return document.getElementById("search-button").firstChild } ],
+            // ]);
         </script>
         {% block head %}
         {% endblock %}
