Add notes edit link and fix table css

--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -33,6 +33,11 @@ code
     color: var(--primary-text-color);
 }
 
+tr, td
+{
+    color: var(--primary-text-color);
+}
+
 body
 {
     background-color: var(--primary-bg-color);
