--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -49,7 +49,7 @@
                 <div id="back-to-top">TOP</div>
             </div>
             <div id="footer">
-                <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leonid Bezroukov</h4>
+                <h4><!--&copy;--> <script type="text/javascript">document.write(new Date().getFullYear());</script></h4>
             </div>
         </div>
     </body>
