--- a/notes/templates/notes/note.html
+++ b/notes/templates/notes/note.html
@@ -29,6 +29,6 @@
         <div id="note-{{ note.name_slug }}" class="note">
             <h1><b>{{ note.name }}</b></h1>
             <div class="toc"></div>
-            {{ note.text | markdown | safe }}
+            {{ note.get_text | markdown | safe }}
         </div>
     {% endblock %}
