--- a/notes/templates/notes/note_change_list.html
+++ b/notes/templates/notes/note_change_list.html
@@ -27,7 +27,7 @@
         document.body.removeChild(textArea);
     }
 
-    const noteTextElement = document.getElementById("id_text");
+    const noteTextElement = document.getElementById("id_text_area");
 
     const getNoteSelection = () => {
         return { "start": noteTextElement.selectionStart, "end": noteTextElement.selectionEnd, "isSelected": () => noteTextElement.selectionStart !== noteTextElement.selectionEnd };
@@ -153,7 +153,7 @@
 
     let files = document.getElementsByClassName('file-upload');
     for (let i = 0; i < files.length; i++) {
-        files[i].appendChild(createButton("COPY", (event) => { 
+        files[i].appendChild(createButton("COPY", (event) => {
             let url = event.target.parentElement.getElementsByTagName('a')[0].href;
             let markdownUrl = `![${url.substring(url.lastIndexOf('/'))}](${url})`
             copyToClipboard(markdownUrl);
@@ -171,7 +171,7 @@
             addPrefixSuffixToLineSelection("    ");
         } else if (keyDownMap[192]) {
             // if (getNoteSelection.isSelected) addPrefixSuffixToLineSelection("`", "`");
-        } 
+        }
 
         //console.log(event.keyCode);
     };
