Fix list margin

--- a/notes/static/notes/default.css
+++ b/notes/static/notes/default.css
@@ -56,6 +56,10 @@
     font: 100% arial, sans-serif;
 }
 
+.note li {
+    margin-left: 20px;
+}
+
 .note ol {
     margin-left: 20px;
     list-style: decimal;
