fix note li margin

--- a/notes/static/notes/default.css
+++ b/notes/static/notes/default.css
@@ -18,21 +18,22 @@
     margin-top: 10px;
 }
 
-.toc-link:link, .toc-link.visited {
+.toc-link:link,
+.toc-link.visited {
     text-decoration: none;
 }
 
 .toc ul {
     margin-left: 10px;
     list-style-type: none;
-    font: 100% arial, sans-serif;
 }
 
-.toc ul > li {
+.toc ul>li {
     font-weight: bold;
 }
 
-.toc ul > ul > li, .toc li > ul > li {
+.toc ul>ul>li,
+.toc li>ul>li {
     font-weight: normal;
 }
 
@@ -42,23 +43,17 @@
 
 .note p {
     margin-left: 20px;
-    font: 100% arial, sans-serif;
     display: table;
 }
 
-.note li > p {
+.note li>p {
     display: contents;
 }
 
-.note > li {
-    width: fit-content;
-    margin-left: 20px;
-    font: 100% arial, sans-serif;
+.note li {
+    margin-left: 40px;
 }
 
-.note li {
-    margin-left: 20px;
-}
 
 .note ol {
     margin-left: 20px;
@@ -72,19 +67,19 @@
     cursor: pointer;
 }
 
-.note > h1 {
+.note>h1 {
     margin-top: 10px;
     margin-left: 10px;
     font: 200% arial, sans-serif;
 }
 
-.note > h2 {
+.note>h2 {
     margin-top: 10px;
     margin-left: 15px;
     font: arial, sans-serif;
 }
 
-.note > h3 {
+.note>h3 {
     margin-top: 10px;
     margin-left: 15px;
     font: arial, sans-serif;
@@ -96,7 +91,7 @@
 
 .note code {
     font-size: large;
-    white-space:break-spaces;
+    white-space: break-spaces;
 }
 
 .note img {
@@ -105,7 +100,9 @@
     margin: 10px;
 }
 
-.note table, .note th, .note td {
+.note table,
+.note th,
+.note td {
     margin-left: 10px;
     padding: 10px;
     border: 3px solid #11387d;
